syntax = "proto2";
package msg;
import "serialize.proto";

// 请求充值页面
message C2GW_ReqRechargeMoney {
    optional int32 amount = 1;
    optional string token = 2;
    optional int32 type = 3;
}

// 返回充值请求
message GW2C_RetRechargeMoney {
    optional string urlcheckout = 1;
}

// 红包平台充值完成通知
message C2GW_PlatformRechargeDone {
    optional int64 userid = 1;
}

// 同步玩家绑定微信信息
message GW2C_SendWechatInfo {
    optional string openid = 1;
}

// 抽奖
message C2GW_StartLuckyDraw {
    optional int64 userid = 1;
}

message GW2C_LuckyDrawHit {
    optional int32 id = 1;
}

// 发送任务列表
message GW2C_SendTaskList {
    repeated msg.TaskData tasks = 1;
}

// 抽奖历史记录
message GW2C_SendLuckyDrawRecord {
    optional LuckyDrawRecord luckydraw = 1;
}

// 请求任务列表
message C2GW_ReqTaskList {
	
}

message GW2C_Ret7DayReward {
    optional int32 day = 1;
}

message C2GW_Get7DayReward {
}

// 上传微信授权code
message C2GW_SendWechatAuthCode {
    optional string code = 1;
}


//请求个人数据
message C2RS_ReqFriendGetRoleInfo
{
    optional int64 roleid = 1;
}

message RS2C_RetFriendGetRoleInfo
{
    optional int32 diamond = 1;
    optional int32 gold = 2;
    optional int64 roleid = 3;
    optional string name = 4;
    optional string head = 5;
    optional int32 sex = 6;
    optional int32 level = 7;
    optional int32 exp = 8;
    optional string ip = 9;
    optional string sign = 10;
    optional int32 age = 11;
    optional int32 maxgold = 12;
    optional int32 maxgoldonetimes = 13;
    optional int32 friendnum = 14;
    optional int32 gametimes = 15;
    optional int32 wintimes = 16;
    repeated int32 maxhand = 17;
    optional int32 championtimes = 18;
    optional int32 vipexp = 19;
    optional int32 viptime = 20;
    optional int32 yearviptime = 21;
    optional int32 viplevel = 22;
    optional int32 createdtime = 23;
    optional int32 isoffline = 24;
    optional int32 stateid = 25;
    optional int32 stateconfid = 26;
    optional int32 entrytimes = 27;
    optional int32 showdowntimes = 28;
    optional int32 mttjointimes = 29;
    optional int32 mttprizetimes = 30;
    optional int32 gametimes2 = 31;
    optional int32 wintimes2 = 32;
    optional int32 entrytimes2 = 33;
    optional int32 showdowntimes2 = 34;
    optional string errcode = 35;
}

